# sustainability_fashion_tracker

./: .gitignore  README.md  app.py  env.example  gitignore.txt  pyproject.toml  replit.nix  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-ProgrammingError-can-t-adapt-type-numpy-int64-SQL-SE-1741997803456.txt  Pasted-sqlalchemy-exc-TimeoutError-QueuePool-limit-of-size-5-overflow-2-reached-connection-timed-out-tim-1742006186224.txt
data/: sustainable_fashion_data.csv
models/: database.py
utils/: achievements.py  auth.py  data_processor.py  recommendations.py
