[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sustainable_fashion_tracker_workspace"
version = "0.1.0"
description = "all dependencies to be added here"
requires-python = ">=3.12,<4.0"
authors = [
    {name = "Shivani Singh"}
]

[tool.poetry]
name = "sustainable_fashion_tracker_workspace"
version = "0.1.0"
description = "all dependencies to be added here"
packages = [{include = "."}]
package-mode = false

[project]
dependencies = [
    "geopy>=2.4.1",
    "langchain-community>=0.3.19",
    "langchain>=0.3.20",
    "numpy>=2.2.3",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
    "twilio>=9.5.0",
    "langchain-openai>=0.3.9",
]
